lex_an.c
/* Generated by re2c 2.0.3 on Wed May 19 23:56:41 2021 */
#line 1 "lex_an.re"
#include "lex_an.h"

void write_ts(const char * ident, char * label, int line, TS * ts,int value){
	entries_t entrie;
	strcpy(entrie.ident, ident);
	strcpy(entrie.label, label);
	entrie.line = line;
	entrie.value = value;
	ts->entries[ts->qnt_entries++] = entrie;
}

static int lex(const char *YYCURSOR, const int line, TS * ts)
{
//	fprintf(stderr,"%s\n",YYCURSOR);
//	const char *YYMARKER;
	const char * saved = YYCURSOR;
    loop:
		saved = YYCURSOR;
    
#line 23 "lex_an.c"
{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
	case 0x00:	goto yy2;
	case '"':	goto yy6;
	case '(':	goto yy8;
	case ')':	goto yy10;
	case '.':	goto yy12;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy14;
	case ';':	goto yy17;
	case '=':	goto yy19;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'g':
	case 'h':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy21;
	case 'e':	goto yy24;
	case 'f':	goto yy25;
	case 'i':	goto yy26;
	case 'p':	goto yy27;
	case '{':	goto yy28;
	case '}':	goto yy30;
	default:	goto yy4;
	}
yy2:
	++YYCURSOR;
#line 45 "lex_an.re"
	{ return 0; }
#line 105 "lex_an.c"
yy4:
	++YYCURSOR;
#line 64 "lex_an.re"
	{write_ts(saved,"ERR", line, ts,0); return 0;}
#line 110 "lex_an.c"
yy6:
	yych = *++YYCURSOR;
	switch (yych) {
	case '"':	goto yy32;
	default:	goto yy6;
	}
yy8:
	++YYCURSOR;
#line 57 "lex_an.re"
	{write_ts(saved,"OPENP", line, ts,0); goto loop;}
#line 121 "lex_an.c"
yy10:
	++YYCURSOR;
#line 58 "lex_an.re"
	{write_ts(saved,"CLOSEP", line, ts,0); goto loop;}
#line 126 "lex_an.c"
yy12:
	++YYCURSOR;
#line 61 "lex_an.re"
	{write_ts(saved,"ENDDOT", line, ts,0); goto loop;}
#line 131 "lex_an.c"
yy14:
	yych = *++YYCURSOR;
	switch (yych) {
	case '.':	goto yy34;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy14;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy36;
	default:	goto yy16;
	}
yy16:
#line 52 "lex_an.re"
	{
			write_ts(saved,"NUM", line, ts,atoi(saved));
			goto loop;}
#line 206 "lex_an.c"
yy17:
	++YYCURSOR;
#line 60 "lex_an.re"
	{write_ts(saved,"ENDDOT", line, ts,0); goto loop;}
#line 211 "lex_an.c"
yy19:
	++YYCURSOR;
#line 59 "lex_an.re"
	{write_ts(saved,"ATTR", line, ts,0); goto loop;}
#line 216 "lex_an.c"
yy21:
	yych = *++YYCURSOR;
yy22:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy21;
	default:	goto yy23;
	}
yy23:
#line 51 "lex_an.re"
	{write_ts(saved,"ID", line, ts,0); goto loop;}
#line 289 "lex_an.c"
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy38;
	default:	goto yy22;
	}
yy25:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'u':	goto yy39;
	default:	goto yy22;
	}
yy26:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'f':	goto yy40;
	default:	goto yy22;
	}
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy42;
	default:	goto yy22;
	}
yy28:
	++YYCURSOR;
#line 55 "lex_an.re"
	{write_ts(saved,"OPENC", line, ts,0); goto loop;}
#line 318 "lex_an.c"
yy30:
	++YYCURSOR;
#line 56 "lex_an.re"
	{write_ts(saved,"CLOSEC", line, ts,0); goto loop;}
#line 323 "lex_an.c"
yy32:
	++YYCURSOR;
#line 62 "lex_an.re"
	{write_ts(saved,"STR", line, ts,0); goto loop;}
#line 328 "lex_an.c"
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy34;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy36;
	default:	goto yy16;
	}
yy36:
	++YYCURSOR;
#line 63 "lex_an.re"
	{write_ts(saved,"ERR", line, ts,0); return 0;}
#line 401 "lex_an.c"
yy38:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy43;
	default:	goto yy22;
	}
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy44;
	default:	goto yy22;
	}
yy40:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy21;
	default:	goto yy41;
	}
yy41:
#line 48 "lex_an.re"
	{write_ts(saved,"IF", line, ts,0); goto loop;}
#line 485 "lex_an.c"
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy45;
	default:	goto yy22;
	}
yy43:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy46;
	default:	goto yy22;
	}
yy44:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'c':	goto yy48;
	default:	goto yy22;
	}
yy45:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy49;
	default:	goto yy22;
	}
yy46:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy21;
	default:	goto yy47;
	}
yy47:
#line 49 "lex_an.re"
	{write_ts(saved,"ELSE", line, ts,0); goto loop;}
#line 581 "lex_an.c"
yy48:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy50;
	default:	goto yy22;
	}
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy51;
	default:	goto yy22;
	}
yy50:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy52;
	default:	goto yy22;
	}
yy51:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'f':	goto yy53;
	default:	goto yy22;
	}
yy52:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy55;
	default:	goto yy22;
	}
yy53:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy21;
	default:	goto yy54;
	}
yy54:
#line 50 "lex_an.re"
	{write_ts(saved,"PRINTF", line, ts,0); goto loop;}
#line 683 "lex_an.c"
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy56;
	default:	goto yy22;
	}
yy56:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy21;
	default:	goto yy57;
	}
yy57:
#line 47 "lex_an.re"
	{write_ts(saved,"FUNCTION", line, ts,0); goto loop;}
#line 761 "lex_an.c"
}
#line 65 "lex_an.re"


}


void lex_check(char * file, TS * ts){
	FILE * fp = fopen(file,"r");
	FILE * of = fopen("lex.output","w");
//	fseek(fp,0,-1);
//	int size = ftell(fp);
//	fseek(fp,0,0);
	char c;
	int line = 1;
	char word[1000]; int wc = 0;
//	char buffer[1000];
	while (!feof(fp)){
		c = fgetc(fp);
//		putchar(c);
		if(c==' '||c=='\n'||c=='\t'){
			if (c == '\n')
				line ++;
			if (strlen(word) >= 1)
				lex(word,line, ts);
			for (int i = 0; i < wc; i++) word[i]=0;
			wc = 0;
		}else
			word[wc++] = c;
	}
	fclose(fp);
	printf("TS entries: %d\n TABLE:\n",ts->qnt_entries);
	printf("\nlabel\t\tline\t\tvalue\n");
	for (int i=0; i<ts->qnt_entries; i++){
		entries_t entrie = ts->entries[i];
		char * str = entrie.label;
		printf("%s\t\t%s\t\t%d\t\t%d\n",entrie.ident,str,entrie.line,entrie.value);
		if (strcmp(entrie.label,"ERR")==0)
			fprintf(stderr,"Erro na linha: %d\nIdentificador: %s\n",entrie.line,entrie.ident);
		fwrite(str,sizeof(char),strlen(str),of);
		fputc(' ',of);
	}
	fwrite("$\n",sizeof(char),2,of);
	fclose(of);
	printf("$\n");
/*    for (int i = 1; i < argc; ++i) {
        lex(argv[i]);
    }
	*/


}


int main(int argc, char **argv)
{
	char * file = argv[argc-1];
	TS ts;
	entries_t entries[1000];
	ts.qnt_entries = 0;
	ts.entries = entries;
	lex_check(file,&ts);
    return 0;
}
